--- a/trunk/035-mhxy/035-mhxy.Editor.csproj
+++ b/trunk/035-mhxy/035-mhxy.Editor.csproj
@@ -333,6 +333,7 @@
   <ItemGroup>
     <None Include="Assets\Plugins\link.xml" />
     <None Include="Assets\StreamingAssets\Data_test.txt" />
+    <None Include="Assets\test.txt" />
     <None Include="Assets\test\Data_Task.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
