--- a/trunk/035-mhxy/035-mhxy.csproj
+++ b/trunk/035-mhxy/035-mhxy.csproj
@@ -293,10 +293,12 @@
     <Compile Include="Assets\test\open.cs" />
     <Compile Include="Assets\test\sss.cs" />
     <Compile Include="Assets\test\UI_ClickTest.cs" />
+    <Compile Include="Assets\UI_Common1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Plugins\link.xml" />
     <None Include="Assets\StreamingAssets\Data_test.txt" />
+    <None Include="Assets\test.txt" />
     <None Include="Assets\test\Data_Task.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
